fix: ui improvements (#452)

--- a/public/css/App.css
+++ b/public/css/App.css
@@ -303,16 +303,37 @@ input[type='number'] {
 }
 
 .coin-wrapper {
-  width: 25%;
+  width: 8.33%;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
   padding: 5px;
   margin-bottom: 10px;
-  flex: 25% auto;
+  flex: 8.33% auto;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 3300px) {
+  .coin-wrapper {
+    width: 16.66%;
+    flex: 16.66% auto;
+  }
+}
+
+@media (max-width: 1650px) {
+  .coin-wrapper {
+    width: 25%;
+    flex: 25% auto;
+  }
+}
+
+@media (max-width: 1100px) {
+  .coin-wrapper {
+    width: 33.33%;
+    flex: 33.33% auto;
+  }
+}
+
+@media (max-width: 825px) {
   .coin-wrapper {
     width: 50%;
     flex: 50% auto;
@@ -447,11 +468,11 @@ input[type='number'] {
 }
 
 .coin-info-label {
-  width: 65%;
+  width: auto;
 }
 
 .coin-info-value {
-  width: 35%;
+  width: auto;
 }
 
 .coin-info-column-title .coin-info-label {
@@ -966,6 +987,11 @@ input[type='number'] {
 .pagination .page-item.disabled .page-link {
   background-color: #272b38;
   border-color: #343a40;
+}
+
+.pagination .page-item {
+  min-width: 2rem;
+  text-align: center;
 }
 /**
   End: Pagination
