--- a/public/css/App.css
+++ b/public/css/App.css
@@ -480,7 +480,7 @@ input[type='number'] {
 }
 
 .coin-info-column-title .coin-info-value {
-  font-style: italic;
+  font-style: bold;
   font-size: 0.8rem;
 }
 
@@ -735,7 +735,7 @@ input[type='number'] {
   width: 50%;
 }
 
-@media (max-width: 550px) {
+@media (max-width: 825px) {
   .profit-loss-container {
     flex-direction: column;
   }
@@ -761,7 +761,8 @@ input[type='number'] {
 }
 
 .profit-loss-wrapper {
-  width: 25%;
+  width: 16.6%;
+  min-width: 12rem;
 }
 
 .profit-loss-wrapper-body {
@@ -776,22 +777,23 @@ input[type='number'] {
 }
 
 .profit-loss-asset {
-  flex: 1 40%;
+  flex: 1 auto;
   font-weight: bold;
 }
 
 .profit-loss-value {
-  flex: 1 60%;
+  flex: 1 auto;
   text-align: right;
+  font-weight: bold;
 }
 
-@media (max-width: 1500px) {
+@media (max-width: 3300px) {
   .profit-loss-wrapper {
     width: 33.3333%;
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1650px) {
   .profit-loss-wrapper {
     width: 50%;
   }
